--- a/src/assets/styles/MediaList.css
+++ b/src/assets/styles/MediaList.css
@@ -1,3 +1,7 @@
+/* MediaList.css */
+@import './common.css';
+
+/* Card-specific styles */
 .card {
     position: relative;
     cursor: pointer;
@@ -23,7 +27,7 @@
     left: 0;
     right: 0;
     top: 0;
-    background: rgba(22, 12, 40, 0.6); /* Slightly dark background using palette color */
+    background: rgba(22, 12, 40, 0.6); /* Slightly dark background */
     color: #fffffa; /* Light text */
     opacity: 0;
     transition: opacity 0.3s, background-color 0.3s;
@@ -95,66 +99,4 @@
 .media-grid {
     display: grid;
     gap: 20px;
-}
-
-.grid-cols-2 {
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.grid-cols-4 {
-    grid-template-columns: repeat(4, 1fr);
-}
-
-.grid-cols-6 {
-    grid-template-columns: repeat(6, 1fr);
-}
-
-.grid-cols-8 {
-    grid-template-columns: repeat(8, 1fr);
-}
-
-.grid-cols-10 {
-    grid-template-columns: repeat(10, 1fr);
-}
-
-/* Dark mode styles */
-.dark-mode {
-    background-color: #121212;
-    color: #e0e0e0;
-}
-
-.dark-mode .container,
-.dark-mode .card,
-.dark-mode .btn,
-.dark-mode .form-select,
-.dark-mode .form-check-input {
-    background-color: #121212;
-    color: #e0e0e0;
-    border-color: #e0e0e0;
-}
-
-.dark-mode .card-body {
-    background: rgba(255, 255, 255, 0.2);
-}
-
-.dark-mode .btn-outline-primary {
-    border-color: #e0e0e0;
-    color: #e0e0e0;
-}
-
-.dark-mode .btn-outline-primary:hover {
-    background-color: #e0e0e0;
-    color: #121212;
-}
-
-.dark-mode .form-check-input {
-    background-color: #e0e0e0;
-    border-color: #e0e0e0;
-}
-
-/* Ensure the container is centered and wider */
-.content-wrapper {
-    max-width: 90%; /* Adjust the width as needed */
-    margin: 0 auto;
-    padding: 20px;
 }
