--- a/src/assets/styles/Modal.css
+++ b/src/assets/styles/Modal.css
@@ -1,3 +1,7 @@
+/* Modal.css */
+@import './common.css';
+
+/* Modal-specific styles */
 .modal-overlay {
     position: fixed;
     top: 0;
@@ -22,11 +26,6 @@
     z-index: 2;
     color: #000; /* Light mode text color */
     padding: 0;
-}
-
-.dark-mode .modal-container {
-    background: rgba(51, 51, 51, 1); /* Dark mode background solid */
-    color: #e0e0e0; /* Dark mode text color */
 }
 
 .modal-background {
@@ -132,18 +131,4 @@
     border-radius: 4px;
     padding: 5px 10px;
     margin: 2px;
-}
-
-.dark-mode .close-button {
-    background-color: rgba(255, 255, 255, 0.2);
-    color: #fff;
-}
-
-.dark-mode .close-button:hover {
-    background-color: rgba(255, 255, 255, 0.4);
-}
-
-.dark-mode .tag {
-    background: #555;
-    color: #fff;
 }
